@@ -247,8 +247,8 @@
     '("expose" "GDK_EXPOSE")
     '("motion-notify" "GDK_MOTION_NOTIFY")
     '("button-press" "GDK_BUTTON_PRESS")
-    '("2button-press" "GDK_2BUTTON_PRESS")
-    '("3button-press" "GDK_3BUTTON_PRESS")
+    '("two-button-press" "GDK_2BUTTON_PRESS")
+    '("three-button-press" "GDK_3BUTTON_PRESS")
     '("button-release" "GDK_BUTTON_RELEASE")
     '("key-press" "GDK_KEY_PRESS")
     '("key-release" "GDK_KEY_RELEASE")
