@@ -1,3 +1,13 @@
+2001-10-30  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl : streamline mkdir stuff.  Prune the object
+	list back to just Window for now. Suppress generation of the Prop
+	get/set accessor methods.
+	* codegen/gdk-types.defs : Updated the 2button/3button event types
+	since I don't feel like automangling them now.
+	* gdk/Event.cs : Killed the now redundant EventType declaration.
+	* glib/Object.cs : Override the Equals and GetHashCode methods.
+
 2001-10-25  Mike Kestner <mkestner@speakeasy.net>
 
 	* glib/Object.cs : Added Get|SetProperty methods for Object
